--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="section-todo-list">
-        <h4>Assignment for Front-end Intern</h4>
+        <!-- <h4>Assignment for Front-end Intern</h4> -->
         <h2>To Do List</h2>
         <div class="input-btn">
             <input type="text" autofocus>
